# sevs-signature

./: Cargo.toml  LICENSE  README.md  build.rs  sevs-iacr.tex
src/: lib.rs  main.rs
src/consensus/: alpenglow.rs  bls_voting.rs  gpu_poh.rs  mod.rs  optimized.rs  parallel_poh.rs  poh.rs  ssf.rs  tower_bft.rs  validator.rs
src/core/: account.rs  block.rs  microblock.rs  mod.rs  qs_transaction.rs  slot.rs  transaction.rs  tx_pool.rs
src/crypto/: accelerated.rs  audit.rs  batch_verify.rs  bech32.rs  bls.rs  hash.rs  key_rotation.rs  keystore.rs  mod.rs  post_quantum.rs  quantum_safe.rs  sevs.rs  sevs_gpu.rs  sevs_ntt.rs  vrf.rs
src/fec/: mod.rs
src/network/: gossip.rs  kernel_bypass.rs  message.rs  mod.rs  node.rs  optimized.rs  optimized_tcp.rs  peer.rs  quic_transport.rs
src/objects/: executor.rs  mod.rs  object.rs  ownership.rs  transaction.rs
src/ordering/: batch_auction.rs  commit_reveal.rs  fair_sequencer.rs  fifo.rs  mod.rs
src/programs/: amm.rs  bridge.rs  mod.rs  nft.rs  stablecoin.rs  staking.rs  system.rs  token.rs  vesting.rs
src/rpc/: methods.rs  mod.rs  rate_limiter.rs  server.rs  types.rs
src/runtime/: bank.rs  executor.rs  firedancer.rs  mod.rs  optimized.rs  program.rs  sigverify.rs
src/storage/: accounts.rs  blocks.rs  compression.rs  engine.rs  mod.rs  optimized.rs
src/swqos/: mod.rs
src/tiles/: mod.rs
src/validators/: consolidation.rs  mod.rs  registry.rs  rewards.rs  slashing.rs
src/zk/: circuits.rs  compression.rs  mod.rs  proofs.rs  rollup.rs  state.rs  validity.rs
